--- a/src/main/resources/ConstantResources_en.properties
+++ b/src/main/resources/ConstantResources_en.properties
@@ -9,7 +9,9 @@ home.title=Home
 yearly.title=Year
 category.title=Category
 category.sub.title=Sub-Category
+account.title=Account
 transaction.title=Transaction
 transaction.value=Value
 transaction.date=Date
 transaction.number.months=Repeat
+transaction.description=Description
