--- a/src/main/resources/ConstantResources_en.properties
+++ b/src/main/resources/ConstantResources_en.properties
@@ -3,6 +3,8 @@ default.save=Save
 default.cancel=Cancel
 default.close=Close
 default.list=List
+default.value=Value
+default.date=Date
 
 home.title=Home
 
@@ -11,7 +13,16 @@ category.title=Category
 category.sub.title=Sub-Category
 account.title=Account
 transaction.title=Transaction
-transaction.value=Value
-transaction.date=Date
 transaction.number.months=Repeat
 transaction.description=Description
+transfer.title=Transfer between accounts
+transfer.account.from=Account from
+transfer.account.to=Account to
+transfer.category.from=Category from
+transfer.category.to=Category to
+transfer.action=Transfer
+balance.title=Balance
+compare.title=Compare Real vs Estimate
+compare.real.title=Real
+compare.estimate.title=Estimate
+compare.difference.title=Difference
