--- a/src/main/resources/ConstantResources_en.properties
+++ b/src/main/resources/ConstantResources_en.properties
@@ -15,14 +15,14 @@ account.title=Account
 transaction.title=Transaction
 transaction.number.months=Repeat
 transaction.description=Description
-transfer.title=Transfer between accounts
+transfer.title=Transfer
 transfer.account.from=Account from
 transfer.account.to=Account to
 transfer.category.from=Category from
 transfer.category.to=Category to
 transfer.action=Transfer
 balance.title=Balance
-compare.title=Compare Real vs Estimate
+compare.title=Compare
 compare.real.title=Real
 compare.estimate.title=Estimate
 compare.difference.title=Difference
